R1.3.0    Jan 29, 2019      Kukhee Kim (khkim)
          * build with yamlLoader R2.1.0, cpsw/framework R4.4.1, hpsTpr R1.1.0 and buildroot-2019.08

R1.2.0    Nov 22, 2019      Kukhee Kim (khkim)
          * bulid with yamlLoader R2.0.0
          * implement named_root to support multiple blades in a single ioc

R1.1.6    Nov 18, 2019      Kukhee Kim (khkim)
          * build with asyn R4.32-1.0.0

R1.1.5    Oct 28, 2019      Kukhee Kim (khkim)
          * build with cpsw/framework R4.3.1  timing/hpsTpr R1.0.5 and yamlLoader R1.1.5

R1.1.4    Sep 20, 2019      Kukhee Kim (khkim)
          * build with cpsw/framework R4.2.0, timing/hpsTpr R1.0.4 and yamlLoader R1.1.4

R1.1.3    Jun 24, 2019      Kukhee Kim (KHKIM)
          * build with cpsw/framework R4.1.2 and yamlLoader R1.1.3

R1.1.2    Nov 8, 2018       Kukhee Kim (KHKIM)
          * build with yamlLoader     R1.1.2
          * build with yaml-cpp-0.5.3_boost-1.64.0
          * build with boost 1.64.0

R1.1.1    Sep 18, 2018      Kukhee Kim (KHKIM)
          * build with yamlLoader     R1.1.1
          * build with hpsTpr         R1.0.2
          * build with cpsw/framework R3.6.6
          * add evrTimePutPulseID in evrTime.h and its implementation

R1.1.0    July 3, 2018      Kukhee Kim (KHKIM)
          * PV name change to reflect LCLS-II naming convention
          * build against cpsw framework R3.6.4

R1.0.0    June 29, 2018     Kukhee Kim (KHKIM)
          force tag!!
          change bo record labels to "Enabled"/"Disabled"

R1.0.0    May 18, 2018      Kukhee Kim (KHKIM)
          force tag!!
          fix typo on PV name

R1.0.0    April 13, 2018    Kukhee Kim (KHKIM)
          force tag!!
          update README
          cleanup pattern diagnostics screen
          update pattern satstus PVs with 0 - need to implement status soon 

R1.0.0    March 21, 2018    Kukhee Kim (KHKIM)

          use yamlLoader R1.1.0
          use hpsTpr R1.0.0
          Use cpsw framework R3.6.3